added background color

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,18 @@
   <title>Git branching lesson on test</title>
   <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-<header>
-  <h1>git branching lesson</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit nihil dolore, molestiae mollitia sequi possimus porro animi voluptatum. Hic ab repellat, laborum quos ratione nam?</p>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quidem quam tenetur ut unde harum, laborum quaerat totam aut excepturi exercitationem ad atque adipisci quia consequuntur dolorum odit neque assumenda veniam? Delectus minima natus, enim est odio incidunt nisi iusto accusamus iste temporibus corporis saepe suscipit repellat et odit cum?</p>
-</header>
+<body>
+  <header>
+    <h1>git branching lesson</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit nihil dolore, molestiae mollitia sequi possimus
+      porro animi voluptatum. Hic ab repellat, laborum quos ratione nam?</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quidem quam tenetur ut unde harum, laborum quaerat
+      totam aut excepturi exercitationem ad atque adipisci quia consequuntur dolorum odit neque assumenda veniam?
+      Delectus minima natus, enim est odio incidunt nisi iusto accusamus iste temporibus corporis saepe suscipit
+      repellat et odit cum?</p>
+  </header>
 </body>
+
 </html>
